@@ -8,6 +8,9 @@ Changes since v2.5
 o The global finder now tells you -- in the status bar -- the name of the
   guide that a hit was found in.
 
+o WEG now remembers if the guide manager, bookmarks manager or the global
+  finder windows were open and when you next run WEG opens them for you.
+
 Changes since v2.4
 ==================
 
